k8s/base/catalog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  namespace: uniqwear
spec:
# repliki
  replicas: 2
  selector:
    matchLabels:
      app: catalog-service
  strategy:
  # rolling update
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: catalog-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3001"
        prometheus.io/path: "/metrics"
    spec:
      # init container
      containers:
      - name: catalog-service
        image: ghcr.io/w-ikiu/uniqwear-catalog:latest
        imagePullPolicy: IfNotPresent
        command: ["node", "app.js"]
        ports:
        - containerPort: 3001
        # zmienne srodowiskowe
        readinessProbe:
          httpGet:
            path: /ready
            port: 3001
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 5
        # liveness probe - czy "zyje"
        livenessProbe:
          httpGet:
            path: /health
            port: 3001
          initialDelaySeconds: 90
          periodSeconds: 15
          failureThreshold: 3
        # resources
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        # security context
        securityContext:
          # non root
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
