k8s/base/checkout-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkout-service
  namespace: uniqwear
spec:
  # repliki
  replicas: 2
  selector:
    matchLabels:
      app: checkout-service
  # rolling update
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: checkout-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3002"
        prometheus.io/path: "/metrics"
    spec:
      containers:
      - name: checkout-service
        image: ghcr.io/w-ikiu/uniqwear-checkout:latest
        imagePullPolicy: IfNotPresent
        command: ["node", "app.js"]
        ports:
        - containerPort: 3002
        readinessProbe:
          httpGet:
            path: /ready
            port: 3002
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 3002
          initialDelaySeconds: 90
          periodSeconds: 15
          failureThreshold: 3
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
