k8s/base/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: uniqwear
spec:
  serviceName: postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "uniqwear_user", "-d", "uniqwear_db"]
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 5
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "uniqwear_user", "-d", "uniqwear_db"]
          initialDelaySeconds: 30
          periodSeconds: 10
          failureThreshold: 3
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        securityContext:
          allowPrivilegeEscalation: false
      volumes:
      - name: postgres-data
        # pvc
        persistentVolumeClaim:
          claimName: postgres-data
